# ytdlp-downloader

./: .gitignore  EXE_BUILD_GUIDE.md  GET_EXE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build.yml
scripts/: build-windows.ps1  download-ytdlp.ps1  download-ytdlp.sh  generate-ico.ps1  generate-icons.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  main.rs
src/components/: Badge.tsx  Button.tsx  Card.tsx  DemoBanner.tsx  IconButton.tsx  Input.tsx  ProgressBar.tsx  QualitySelector.tsx  Sidebar.tsx  index.ts
src/hooks/: index.ts  useTauri.ts
src/screens/: SettingsScreen.tsx
src/screens/MainScreen/: ActiveDownloads.tsx  CompletedDownloads.tsx  UrlInput.tsx  VideoPreview.tsx  index.tsx
src/stores/: appStore.ts
src/types/: index.ts
