[package]
name = "ytdlp-app"
version = "0.1.0"
description = "YT-DLP Downloader - A modern desktop app for downloading YouTube videos"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "fs-exists", "window-show", "fs-write-file", "dialog-open", "dialog-save", "window-maximize", "window-close", "fs-remove-file", "process-relaunch", "window-hide", "fs-read-dir", "window-unminimize", "window-minimize", "window-start-dragging", "fs-rename-file", "fs-read-file", "window-unmaximize", "process-exit", "fs-create-dir", "path-all", "shell-open", "shell-execute", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process", "io-util"] }
regex = "1.10"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
