[package]
name = "ytdlp-app"
version = "0.1.0"
description = "YT-DLP Downloader - A modern desktop app for downloading YouTube videos"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "window-show", "fs-rename-file", "fs-remove-file", "fs-write-file", "window-unminimize", "window-minimize", "path-all", "window-maximize", "process-relaunch", "fs-read-file", "dialog-open", "window-start-dragging", "window-hide", "window-close", "shell-execute", "window-unmaximize", "fs-create-dir", "shell-sidecar", "fs-read-dir", "process-exit", "fs-exists", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process", "io-util"] }
regex = "1.10"
dirs = "5.0"
which = "6.0"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
